<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TikiTiki</string>
    <string name="title">Free Music</string>
	<string name="search">search</string>
	<string name="about">About</string>
	<string name="about_tikitiki">
		All searched content in this application comes from 「tikitiki.cn」.
		Tikitiki is a website where you can download a specific 
		platform\'s  music（uncharged only） without installing its 
		client terminal.
	</string>
	<string name="visit">Visit</string>
	<string name="vendor_tencent">Tencent</string>
	<string name="vendor_netease">Netease</string>
	<string name="vendor_kugou">Kugou</string>
	<string name="hint">Please input keyword here</string>
</resources>
